[package]
name = "wlc-sys-with_elogind"
version = "0.0.8"
authors = ["Victor Brekenfeld (Drakulix) <github@drakulix.de>", "윤병익 (Honey-Be) <yeun0908@gmail.com>"]
build = "build.rs"
description = "Bindgen generated low-level wlc wrapper"
documentation = "https://drakulix.github.io/wlc/wlc-sys/"
repository = "https://github.com/Honey-Be/wlc/tree/master/wlc-sys"
keywords = ["wayland", "compositor", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"
exclude = [".travis.yml", ".rustfmt.toml"]

[lib]
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.22"
cmake = { version = "0.1", optional = true }

[dependencies]
libc = "0.2"

[features]
static = ["cmake"]
